onprem/application/apjung-backend/dev/Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apjung-backend-dev-deploy
  namespace: dev
  labels:
    app.kubernetes.io/name: apjung-backend-dev
    app.kubernetes.io/instance: apjung-backend-dev-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: apjung-backend-dev-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apjung-backend-dev
        app.kubernetes.io/instance: apjung-backend-dev-pod
    spec:
      imagePullSecrets:
        - name: dockerhub-secrets
      containers:
        - name: apjung-backend-dev-pod
          image: labyu/apjung-backend:dev-152
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1000Mi"
              cpu: "250m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apjung-admin-dev-deploy
  namespace: dev
  labels:
    app.kubernetes.io/name: apjung-admin-dev
    app.kubernetes.io/instance: apjung-admin-dev-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: apjung-admin-dev-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apjung-admin-dev
        app.kubernetes.io/instance: apjung-admin-dev-pod
    spec:
      imagePullSecrets:
        - name: dockerhub-secrets
      containers:
        - name: apjung-admin-dev-pod
          image: labyu/apjung-admin:dev-43
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "400Mi"
              cpu: "250m"
