onprem/application/apjung-backend/dev/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apjung-backend-dev-svc
  namespace: dev
  labels:
    app.kubernetes.io/name: apjung-backend-dev
    app.kubernetes.io/instance: apjung-backend-dev-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: apjung-backend-dev-pod
  type: ClusterIP
